<?xml version="1.0" encoding="UTF-8"?>

<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>vavi</groupId>
  <artifactId>vavi-commons</artifactId>
  <name>Vavi Commons API</name>
  <organization>
    <name></name>
  </organization>
  <version>1.0.6</version>
  <url>https://github.com/umjammer/vavi-commons</url>
  <description>1.0.6

    update logging
    update content handler

1.0.5

    move LevenshteinDistance from vavi-commons-sandbox
    make LevenshteinDistance as a bean
    upgrade @PropsEntity functionality
    add xml pretty printer

1.0.4

    normalizer

1.0.3

    add property related

TODO

    use java9 URLStreamHandlerProvider
    move win32 to sandbox</description>
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <repositories>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.3.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.3.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <scm>
    <url>https://github.com/umjammer/vavi-commons</url>
  </scm>
  <issueManagement>
    <url>https://github.com/umjammer/vavi-commons/issues</url>
  </issueManagement>
</project>
